update rendering code (WIP)